--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,31 @@
 version: "3.9"
 
 services:
+
+#  web:
+#    build: .
+#    command: python manage.py runserver 0.0.0.0:8000
+#    ports:
+#      - "8000:8000"
+#    environment:
+#      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+#      - CELERY_BROKER=redis://redis-db:6379/0
+#      - CELERY_BACKEND=redis://redis-db:6379/0
+#    depends_on:
+#      - redis-db
+#      - postgres-db
+#
+#  celery:
+#    build: .
+#    command: celery --app = picasso.celery:celery_app worker -l INFO
+#    environment:
+#      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+#      - CELERY_BROKER=redis://redis-db:6379/0
+#      - CELERY_BACKEND=redis://redis-db:6379/0
+#    depends_on:
+#      - web
+#      - redis
+
   postgres-db:
     image: postgres:14
     ports:
@@ -10,6 +35,10 @@ services:
     volumes:
       - postgres-db:/var/lib/postgresql
 
+  redis-db:
+    image: "redis"
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres-db:
