--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,33 @@
-version: "3.9"
+version: "3.8"
 
 services:
 
-#  web:
-#    build: .
-#    command: python manage.py runserver 0.0.0.0:8000
-#    ports:
-#      - "8000:8000"
-#    environment:
-#      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-#      - CELERY_BROKER=redis://redis-db:6379/0
-#      - CELERY_BACKEND=redis://redis-db:6379/0
-#    depends_on:
-#      - redis-db
-#      - postgres-db
-#
-#  celery:
-#    build: .
-#    command: celery --app = picasso.celery:celery_app worker -l INFO
-#    environment:
-#      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-#      - CELERY_BROKER=redis://redis-db:6379/0
-#      - CELERY_BACKEND=redis://redis-db:6379/0
-#    depends_on:
-#      - web
-#      - redis
+  web:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - REDIS_HOST=redis-db
+      - REDIS_PORT=6379
+      - POSTGRES_HOST=postgres-db
+      - POSTGRES_PORT=5432
+    depends_on:
+      - redis-db
+      - postgres-db
+
+  worker:
+    build: .
+    command: celery -A picasso worker --loglevel=INFO
+    environment:
+      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - REDIS_HOST=redis-db
+      - REDIS_PORT=6379
+      - POSTGRES_HOST=postgres-db
+      - POSTGRES_PORT=5432
+    depends_on:
+      - redis-db
+      - postgres-db
 
   postgres-db:
     image: postgres:14
@@ -39,6 +42,22 @@ services:
     image: "redis"
     ports:
       - "6379:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 3s
+      timeout: 3s
+      retries: 3
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      REDIS_HOSTS: redis-db
+      REDIS_HOST: redis-db
+      REDIS_PORT: 6379
+      HTTP_USER: root
+      HTTP_PASSWORD: root
+    ports:
+      - "8081:8081"
 
 volumes:
   postgres-db:
